HD rolling working

--- a/src/templates/actors/fragments/char/tab-stats.html
+++ b/src/templates/actors/fragments/char/tab-stats.html
@@ -101,7 +101,14 @@
           value="{{actor.data.data.baseAc}}"
           data-dtype="Number"
         />
-
+      </div>
+      <div class="hd flex flexrow items-center">
+          <span><label>{{localize 'swnr.sheet.hd'}}</label>:</span>
+        <input
+          class="w-6   text-center px-1.5 py-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+          name="data.hitDie"
+          value="{{actor.data.data.hitDie}}"
+        />
       </div>
      </div>
 
