--- a/src/templates/dialogs/add-bulk-skills.html
+++ b/src/templates/dialogs/add-bulk-skills.html
@@ -1,18 +1,20 @@
 <form class="-m-2 p-2 bg-gray-200">
   <div class="border-b border-trueGray-500 border1 mb-3 pb-3">
     <input type="radio" name="skillList" value="revised" />
-    <label for="revised">Revised Skill List</label>
+    <label for="revised">Revised Skill List</label><br>
     <input type="radio" name="skillList" value="classic" />
-    <label for="classic">Classic Skill List</label>
+    <label for="classic">Classic Skill List</label><br>
     <input type="radio" name="skillList" value="none" />
-    <label for="none">No Stock Skill List</label>
+    <label for="none">No Stock Skill List</label><br>
+    <input type="radio" name="skillList" value="compendiumList" />
+    <label for="none">Use a Compendium Skill List</label><br>
   </div>
   <div>
     <input type="radio" name="extra" value="none" />
-    <label for="none">No Extra Skills</label>
+    <label for="none">No Extra Skills</label><br>
     <input type="radio" name="extra" value="psionic" />
-    <label for="psychic">Add Psychic Skills</label>
+    <label for="psychic">Add Psychic Skills</label><br>
     <input type="radio" name="extra" value="spaceMagic" />
-    <label for="spaceMagic">Add Space Magic Skills</label>
+    <label for="spaceMagic">Add Space Magic Skills</label><br>
   </div>
 </form>
