janky show long desc for powers

--- a/src/templates/chat/faction-log.html
+++ b/src/templates/chat/faction-log.html
@@ -2,8 +2,9 @@
   <div><h4>{{{ title }}}</h4></div>
   <div>{{{ content }}}</div>
   {{#if longContent}}
-  <div class="border border-gray-700 p-2 placeholder-blue-800">
-    <span style="display:none" class="hiddenLong">{{{ longContent }}} </span> <br>
+  <span style="display:none" class="hiddenLong">{{{ longContent }}} </span> 
+
+  <div class="border border-gray-700 p-2 placeholder-blue-800 ">
     <button class="longShowDesc">Show Long Desc.</button></div>
   {{/if}}
   {{{ roll }}}
