--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -37,6 +37,12 @@ $chatblue: #d4d5d6;
   margin: auto;
 }
 
+.card-show-buttons {
+  width: 60%;
+  padding: 4px;
+  margin: auto;
+}
+
 .chat-button-small {
   width: 22px;
   height:22px;
