--- a/src/templates/chat/power-roll.html
+++ b/src/templates/chat/power-roll.html
@@ -1,7 +1,16 @@
 <div class="chat-card">
   <h3 title="{{ power.data.data.description }}">{{ power.name }}</h3>
 
+  <div class="chat-desc">
+    {{{trim power.data.data.description 200}}}
+    {{#if (wouldTrim power.data.data.description 200)}}
+      <div class="border border-gray-700 placeholder-blue-800 pt-0">
+        <span style="display:none" class="hiddenLong">{{{ power.data.data.description }}} </span> 
+        <button class="longShowDesc ">Show Long Desc.</button>
+      </div>
+    {{/if}}
 
+  </div>
 
   {{#if power.data.data.range}}
       <div >
