--- a/src/templates/actors/fragments/item-table.html
+++ b/src/templates/actors/fragments/item-table.html
@@ -9,6 +9,10 @@
     {{/if}}
     <div class=""> {{ localize 'swnr.item.location' }} </div>
     <div class="item-controls flex-shrink text-right">
+      <a class="item-control item-search text-gray-100 hover:text-green-400 transition-colors"
+        title="{{localize 'swnr.sheet.search-item'}}" data-item-type="{{ itemType }}" data-item-name="{{ name }}">
+          <i class="fas fa-search"></i>
+      </a>
       <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
         title="{{localize 'swnr.sheet.add-item'}}" data-item-type="{{ itemType }}" data-item-name="{{ name }}">
         <i class="fas fa-plus"></i>
