--- a/src/templates/actors/fragments/char/tab-power.html
+++ b/src/templates/actors/fragments/char/tab-power.html
@@ -10,6 +10,10 @@
               
               <div class="item-effect pr-2.0">{{localize 'swnr.sheet.description'}}</div>
               <div class="item-controls flex-shrink text-right">
+                <a class="item-control item-search text-gray-100 hover:text-green-400 transition-colors"
+                  title="{{localize 'swnr.sheet.search-item'}}" data-item-type="cyberware"  data-item-name="Cyberware">
+                  <i class="fas fa-search"></i>
+                </a> 
                 <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
                   title="{{localize 'swnr.sheet.add-item'}}" data-item-type="cyberware" data-item-name="Cyberware">
                   <i class="fas fa-plus"></i>
