--- a/src/templates/actors/fragments/char/tab-stats.html
+++ b/src/templates/actors/fragments/char/tab-stats.html
@@ -120,6 +120,10 @@
             <div class="item-name flex2 pr-2">{{localize 'swnr.sheet.tabs.foci'}} </div>
             <div class="item-effect w-8 flex-shrink">{{localize 'swnr.sheet.level'}}</div>
             <div class="item-controls w-20 text-right">
+              <a class="item-control item-search text-gray-100 hover:text-green-400 transition-colors"
+                title="{{localize 'swnr.sheet.search-item'}}" data-item-type="focus" data-item-name="Focus">
+                <i class="fas fa-search"></i>
+              </a>
               <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
                 title="{{localize 'swnr.sheet.add-item'}}" data-item-type="focus" data-item-name="Focus">
                 <i class="fas fa-plus"></i>
