--- a/src/templates/actors/fragments/char/tab-power.html
+++ b/src/templates/actors/fragments/char/tab-power.html
@@ -62,6 +62,10 @@
             <div class="item-source text-center">{{localize 'swnr.sheet.source'}} </div>
             <div class="item-level pr-2.0 text-center">{{localize 'swnr.sheet.level'}}</div>
             <div class="item-controls text-right flex-shrink">
+              <a class="item-control item-search text-gray-100 hover:text-green-400 transition-colors"
+                title="{{localize 'swnr.sheet.search-item'}}" data-item-type="power"  data-item-name="Power">
+                <i class="fas fa-search"></i>
+              </a> 
               <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
                 title="{{localize 'swnr.sheet.add-item'}}" data-item-type="power"  data-item-name="Power">
                 <i class="fas fa-plus"></i>
