--- a/src/templates/actors/fragments/vehicle-defense-table.html
+++ b/src/templates/actors/fragments/vehicle-defense-table.html
@@ -4,6 +4,10 @@
     <div class="item-name flex2">{{localize 'swnr.sheet.ship.defense'}} </div>
     <div class="item-effect">{{localize 'swnr.sheet.ship.effect'}}</div>
     <div class="item-controls text-right">
+      <a class="item-control item-search text-gray-100 hover:text-green-400 transition-colors"
+        title="{{localize 'swnr.sheet.search-item'}}" data-item-type="shipDefense"  data-item-name="Defense">
+        <i class="fas fa-search"></i>
+      </a> 
       <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
         title="{{localize 'swnr.sheet.add-item'}}" data-item-type="shipDefense"  data-item-name="Defense">
         <i class="fas fa-plus"></i>
