--- a/src/templates/actors/npc-sheet.html
+++ b/src/templates/actors/npc-sheet.html
@@ -334,6 +334,10 @@
         <a class="item-control item-create text-gray-800 hover:text-green-400 transition-colors"
             title="{{localize 'swnr.sheet.add-item'}}" data-item-type="power"  data-item-name="Ability">
             <i class="fas fa-plus"></i>
+        </a>
+        <a class="item-control item-search text-gray-800 hover:text-green-400 transition-colors"
+          title="{{localize 'swnr.sheet.search-item'}}" data-item-type="power"  data-item-name="Ability">
+          <i class="fas fa-search"></i>
         </a> 
       </h3>
       <ul class="flex flex-col gap-0.5">
@@ -349,6 +353,18 @@
             title="{{localize 'swnr.sheet.add-item'}}" data-item-type="weapon"  data-item-name="Weapon">
             <i class="fas fa-plus"></i>
         </a> 
+        <a class="item-control item-search text-gray-800 hover:text-green-400 transition-colors"
+          title="{{localize 'swnr.sheet.search-item'}}" data-item-type="weapon"  data-item-name="Weapon">
+          <i class="fas fa-skull"></i>
+        </a>
+        <a class="item-control item-search text-gray-800 hover:text-green-400 transition-colors"
+          title="{{localize 'swnr.sheet.search-item'}}" data-item-type="armor"  data-item-name="Armor">
+          <i class="fas fa-shield-alt"></i>
+        </a>
+        <a class="item-control item-search text-gray-800 hover:text-green-400 transition-colors"
+          title="{{localize 'swnr.sheet.search-item'}}" data-item-type="item"  data-item-name="Item">
+          <i class="fas fa-suitcase"></i>
+        </a>
       </h3>
       <ul class="flex flex-col gap-0.5">
         {{>
