bg color for scroll bar

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -71,7 +71,7 @@ $chatblue: #d4d5d6;
   @tailwind base;
 }
 section.window-content {
-  @apply bg-white;
+  @apply bg-gray-500;
 }
 input[type="text"], input[type="number"], input[type="password"], input[type="date"], input[type="time"], select, textarea { 
   @appy focus:shadow-none focus:outline-none;
