--- a/src/templates/actors/drone-sheet.html
+++ b/src/templates/actors/drone-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} -m-2 p-2 bg-gray-500">
+<form class="{{cssClass}} -m-2 p-2 form-sheet">
   {{#if actor.limited}}
     {{>
     "systems/swnr/templates/actors/fragments/limited-sheet.html"
