--- a/src/templates/actors/npc-sheet.html
+++ b/src/templates/actors/npc-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} bg-gray-500 -m-2 p-2 space-y-2">
+<form class="{{cssClass}} form-sheet -m-2 p-2 space-y-2">
   {{#if actor.limited}}
     {{>
     "systems/swnr/templates/actors/fragments/limited-sheet.html"
