--- a/src/templates/items/armor-sheet.html
+++ b/src/templates/items/armor-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} -m-2 p-2 bg-gray-500">
+<form class="{{cssClass}} -m-2 p-2 form-sheet">
   {{> "systems/swnr/templates/items/fragments/desc.html"}}
   {{> "systems/swnr/templates/items/fragments/item-base.html"}}
   <div class="flex gap-1 justify-between">
