--- a/src/templates/items/asset-sheet.html
+++ b/src/templates/items/asset-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} -m-2 p-2 bg-gray-500">
+<form class="{{cssClass}} -m-2 p-2 form-sheet">
   {{> "systems/swnr/templates/items/fragments/desc.html"}}
   <div class="flex flexrow gap-1 text-center">
     <!--HP-->
