--- a/src/templates/items/weapon-sheet.html
+++ b/src/templates/items/weapon-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} -m-2 p-2 bg-gray-500">
+<form class="{{cssClass}} -m-2 p-2 form-sheet">
   {{> "systems/swnr/templates/items/fragments/desc.html"}}
   {{> "systems/swnr/templates/items/fragments/item-base.html"}}
   <div class="grid m-2 p-2 border border-black grid-cols-2 hidden">
