--- a/src/templates/items/focus-sheet.html
+++ b/src/templates/items/focus-sheet.html
@@ -8,7 +8,7 @@
         {{/select}}
       </select>
 
-  <div class="pt-1 mt-1 border border-black rounded-md bg-gray-400 mb-2">
+  <div class="pt-1 mt-1 border border-black rounded-md bg-gray-400 bg-opacity-75 mb-2">
 
     <h3 class="text-base p-1">{{localize 'swnr.foci.level1'}}</h3>
     <div class="p-1 border-t border-black">
@@ -16,7 +16,7 @@
       editable=editable }}
     </div>
   </div>
-  <div class="border border-black rounded-md bg-gray-400">
+  <div class="border border-black rounded-md bg-gray-400 bg-opacity-75">
     <h3 class="text-base p-1">{{localize 'swnr.foci.level2'}}</h3>
     <div class="p-1 border-t border-black">
       {{editor content=data.data.level2 target="data.level2" button=true owner=owner
