--- a/src/templates/items/fragments/desc.html
+++ b/src/templates/items/fragments/desc.html
@@ -19,7 +19,7 @@
     />
   </div>
 </div>
-<div class="border border-gray-600 rounded-md my-2 bg-gray-400">
+<div class="border border-gray-600 rounded-md my-2 bg-gray-400 bg-opacity-75">
   <h2 class="text-base p-1">{{localize 'swnr.sheet.description'}}</h2>
   <div class="p-1 border-t border-black">
     {{!-- TODO: fix is for wrapping around text, because this is a little fixed --}}
