--- a/src/templates/actors/vehicle-sheet.html
+++ b/src/templates/actors/vehicle-sheet.html
@@ -168,7 +168,7 @@
                     <div class="item-name flex2">Description </div>
                   </li>
                 </div>
-                <div class="bg-gray-400 border border-gray-700 rounded-md p-2 mt-4">
+                <div class="bg-gray-400 bg-opacity-75 border border-gray-700 rounded-md p-2 mt-4">
                   {{editor content=data.data.description target="data.description" button=true
                   owner=owner editable=editable}}
                 </div>
@@ -181,7 +181,7 @@
                     <div class="item-name flex2">Mods</div>
                   </li>
                 </div>
-                <div class="bg-gray-400 border border-gray-700 rounded-md p-2 mt-4">
+                <div class="bg-gray-400 bg-opacity-75 border border-gray-700 rounded-md p-2 mt-4">
                   {{editor content=data.data.mods target="data.mods" button=true
                   owner=owner editable=editable}}
                 </div>
