--- a/src/templates/items/armor-sheet.html
+++ b/src/templates/items/armor-sheet.html
@@ -18,7 +18,7 @@
       <div>{{localize 'swnr.armor.type.label'}}:</div>
       <select
         name="data.type"
-        class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+        class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
       >
         {{#select data.data.type}}
         <option value="primitive">
