--- a/src/templates/items/asset-sheet.html
+++ b/src/templates/items/asset-sheet.html
@@ -20,7 +20,7 @@
     <!-- assetType -->
     <div class="flex-col text-center items-center p-2">
       {{localize 'swnr.sheet.faction.assetType'}}:
-      <select class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+      <select class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
         name="data.assetType">
         {{#select data.data.assetType}}
         <option value="cunning">Cunning</option>
@@ -34,7 +34,7 @@
     <div class="flex-col text-center items-center p-2">
       <div>{{localize 'swnr.sheet.faction.rating'}}</div>
 
-      <select class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md" name="data.rating">
+      <select class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md" name="data.rating">
         {{#select data.data.rating}}
         <option value="1">1</option>
         <option value="2">2</option>
@@ -60,7 +60,7 @@
     <div class="flex-col text-center items-center p-2">
 
       <div>{{localize 'swnr.sheet.faction.tl'}} </div>
-      <select class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md" name="data.tl">
+      <select class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md" name="data.tl">
         {{#select data.data.tl}}
         <option value="0">0</option>
         <option value="1">1</option>
@@ -75,7 +75,7 @@
     <!-- Attack Source-->
     <div class="flex-col text-center items-center p-2">
       {{localize 'swnr.sheet.faction.attackSource'}}:
-      <select class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+      <select class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
         name="data.attackSource">
         {{#select data.data.attackSource}}
         <option value=""></option>
@@ -89,7 +89,7 @@
     <!-- Attack Target-->
     <div class="flex-col text-center items-center p-2">
       {{localize 'swnr.sheet.faction.attackTarget'}}:
-      <select class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+      <select class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
         name="data.attackTarget">
         {{#select data.data.attackTarget}}
         <option value=""></option>
