--- a/src/templates/items/focus-sheet.html
+++ b/src/templates/items/focus-sheet.html
@@ -1,6 +1,6 @@
 <form class="{{cssClass}} -m-2 p-2 form-sheet">
   {{> "systems/swnr/templates/items/fragments/desc.html"}}
-  {{localize 'swnr.foci.level'}}: <select class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md" name="data.level">
+  {{localize 'swnr.foci.level'}}: <select class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md" name="data.level">
         {{#select data.data.level}}
         <option value=""></option>
         <option value="1">1</option>
