--- a/src/templates/items/fragments/item-base.html
+++ b/src/templates/items/fragments/item-base.html
@@ -46,7 +46,7 @@
   <div>
     {{localize 'swnr.item.location'}}:
     <select
-      class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+      class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
       name="data.data.location"
     >
       {{#select data.location}}
@@ -83,7 +83,7 @@
   <div>
     {{localize 'swnr.item.quality.label'}}:
     <select
-      class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+      class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
       name="data.quality"
     >
       {{#select data.data.quality}}
