--- a/src/templates/items/power-sheet.html
+++ b/src/templates/items/power-sheet.html
@@ -45,7 +45,7 @@
     <div class="flexcol">
       <label for="">{{localize 'swnr.sheet.powers.save'}}:</label>
         <select
-          class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+          class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
           name="data.save"
         >
           {{#select data.data.save}}
@@ -84,7 +84,7 @@
     <div class="flexcol">
       <label for="">{{localize 'swnr.effort.title'}}:</label>
         <select
-          class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+          class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
           name="data.effort"
         >
           {{#select data.data.effort}}
