--- a/src/templates/items/shipWeapon-sheet.html
+++ b/src/templates/items/shipWeapon-sheet.html
@@ -23,7 +23,7 @@
     <!-- tl -->
     <div>
       <div> {{localize 'swnr.item.techlevel'}}: </div>
-      <select class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md" name="data.tl">
+      <select class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md" name="data.tl">
         {{#select data.data.tl}}
         <option value="">{{localize 'swnr.ammo.none'}}</option>
         <option value="4">4</option>
@@ -54,7 +54,7 @@
       <div>
         <div> {{localize 'swnr.sheet.ammoType'}}: </div>
         <select
-          class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+          class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
           name="data.ammo.type"
         >
           {{#select data.data.ammo.type}}
