--- a/src/templates/items/skill-sheet.html
+++ b/src/templates/items/skill-sheet.html
@@ -5,7 +5,7 @@
       <div>Stat:</div>
       <select
         name="data.defaultStat"
-        class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+        class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
       >
         {{#select data.data.defaultStat}}
         <option value="ask">{{localize 'swnr.sheet.ask'}}</option>
@@ -22,7 +22,7 @@
       <div>Die Pool:</div>
       <select
         name="data.pool"
-        class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+        class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
       >
         {{#select data.data.pool}}
         <option value="ask">{{localize 'swnr.sheet.ask'}}</option>
@@ -50,7 +50,7 @@
         type="text"
         name="data.source"
         value="{{data.data.source}}"
-        class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+        class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
       />
     </div>
   </div>
