--- a/src/templates/items/weapon-sheet.html
+++ b/src/templates/items/weapon-sheet.html
@@ -59,7 +59,7 @@
     <div>
       <div>{{localize 'swnr.sheet.stats'}}:</div>
       <select
-        class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+        class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
         name="data.stat"
       >
         {{#select data.data.stat}}
@@ -72,7 +72,7 @@
         {{/select}}
       </select>
       <select
-        class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+        class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
         name="data.secondStat"
       >
         {{#select data.data.secondStat}}
@@ -112,7 +112,7 @@
       {{#if owner}}
         <div>{{localize 'swnr.sheet.skill'}}:</div>
         <select
-          class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+          class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
           name="data.skill"
         >
           {{#select data.data.skill}}
@@ -131,7 +131,7 @@
       <div>
         <div> {{localize 'swnr.sheet.ammoType'}}: </div>
         <select
-          class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+          class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
           name="data.ammo.type"
         >
           {{#select data.data.ammo.type}}
@@ -233,7 +233,7 @@
         <div>{{localize 'swnr.sheet.saves.save'}}:</div>
 
         <select
-          class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+          class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
           name="data.save"
         >
           {{#select data.data.save}}
