--- a/src/templates/items/power-sheet.html
+++ b/src/templates/items/power-sheet.html
@@ -62,7 +62,7 @@
   </div>
   <div class="flex gap-1">
     <div>
-      <label for="">{{localize 'swnr.sheet.powers.range'}}:</label>
+      <label for=""><br>{{localize 'swnr.sheet.powers.range'}}:</label>
 			<input
         type="text"
         class="px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-opacity-75 rounded-md"
@@ -70,8 +70,8 @@
         value="{{data.data.range}}"
       />
     </div>
-    <div>
-    <label for="">{{localize 'swnr.sheet.powers.skill'}}:</label>
+    <div class="flex flex-col">
+    <label for="data.skill">{{localize 'swnr.sheet.powers.skill'}}:</label>
 			<input
         type="text"
         class="px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-opacity-75 rounded-md"
@@ -82,7 +82,7 @@
 
 
     <div class="flexcol">
-      <label for="">{{localize 'swnr.effort.title'}}:</label>
+      <label for=""><br>{{localize 'swnr.effort.title'}}:</label>
         <select
           class="px-1 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
           name="data.effort"
@@ -97,7 +97,7 @@
     </div>
 
     <div class="flex items-center">
-      <label class="flex items-center gap-1">
+      <label class="flex items-center gap-1"><br><br>
         <input
           class="px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-opacity-75 rounded-md"
           type="checkbox"
