removing bg color from dialogs

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -183,7 +183,14 @@ $shadowColor: black;
 }
 
 .dialog-buttons {
-  @apply -m-2 p-2 mt-0 pt-0 bg-gray-200;
+  @apply -m-2 p-2 mt-0 pt-0 bg-gray-700;
+}
+button.dialog-button {
+  @apply bg-gray-500;
+}
+
+.dialog-content {
+  @apply -m-2 p-2 mt-0 pt-0 bg-gray-700;
 }
 
 .sheet-button {
