--- a/src/templates/dialogs/add-bulk-skills.html
+++ b/src/templates/dialogs/add-bulk-skills.html
@@ -1,4 +1,4 @@
-<form class="-m-2 p-2 bg-gray-200">
+<form class="-m-2 p-2">
   <div class="border-b border-trueGray-500 border1 mb-3 pb-3">
     <input type="radio" name="skillList" value="revised" />
     <label for="revised">Revised Skill List</label><br>
