--- a/src/templates/dialogs/tweak-char.html
+++ b/src/templates/dialogs/tweak-char.html
@@ -1,4 +1,4 @@
-<form class="bg-gray-200 -m-2 p-2 pb-4 flex flexcol gap-1 justify-between">
+<form class=" -m-2 p-2 pb-4 flex flexcol gap-1 justify-between">
   <div class="mb-4">
     <label for="advantageInit">{{localize 'swnr.dialog.tweak.adv-init'}}: </label>
     <input type="checkbox" name="advantageInit" id="advantageInit" {{checked actor.data.data.tweak.advInit}}>
