--- a/src/templates/dialogs/roll-skill.html
+++ b/src/templates/dialogs/roll-skill.html
@@ -1,13 +1,13 @@
-<form class="-m-2 p-2 pb-4 bg-gray-300 space-y-2">
+<form class="-m-2 p-2 pb-4 space-y-2">
   <div>
     {{! dice }}
     <label for="">{{localize 'swnr.chat.dicepool'}}: </label>
     <select
       name="dicepool"
       {{#if (eq skill.pool 'ask')}}
-        class="w-16 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+        class="w-16 pl-1 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
       {{else}}
-        class="w-16 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+        class="w-16 pl-1 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
       {{/if}}
     >
       {{#select skill.pool}}
@@ -28,9 +28,9 @@
     <select
       name="stat"
       {{#if (eq skill.defaultStat 'ask')}}
-        class="w-32 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+        class="w-32 pl-1 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
       {{else}}
-        class="w-32 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+        class="w-32 pl-1  border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
       {{/if}}
     >
       {{#select skill.defaultStat}}
