--- a/src/templates/dialogs/roll-spike.html
+++ b/src/templates/dialogs/roll-spike.html
@@ -1,4 +1,4 @@
-<form class="bg-gray-200 -m-2 p-2 pb-4 flex gap-1 justify-between">
+<form class=" -m-2 p-2 pb-4 flex gap-1 justify-between">
   <div class="flex flex-col">
 
   <div class="flex flexrow gap-2">
