--- a/src/templates/items/skill-sheet.html
+++ b/src/templates/items/skill-sheet.html
@@ -36,7 +36,7 @@
       <div>Skill Level:</div>
       <input
         type="number"
-        class="px-1 text-center w-8 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+        class="px-1 text-center w-8 border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
         name="data.rank"
         min="-1"
         max="4"
