This is the correcter way to do this I think

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -227,6 +227,10 @@ button.dialog-button {
   background-image: url("/icons/svg/d20-black.svg") !important;
 }
 
+option{
+  @apply bg-gray-400 text-white;
+}
+
 button {
   @apply border border-gray-700 rounded-md p-1 bg-gray-300;
 }
