--- a/src/templates/actors/fragments/vehicle-fitting-table.html
+++ b/src/templates/actors/fragments/vehicle-fitting-table.html
@@ -6,7 +6,7 @@
     <div class="item-controls text-right">
     
       <a class="item-control item-search text-gray-100 hover:text-green-400 transition-colors"
-        title="{{localize 'swnr.sheet.search-item'}}" data-item-type="shipFitting"  data-item-name="Fitting">
+        title="{{localize 'swnr.sheet.search-item'}}" data-item-type="shipFitting"  data-item-name="Fitting" data-item-subtype={{data.type}}>
         <i class="fas fa-search"></i>
       </a> 
       <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
