Moving the subtgype information to a partial variable

--- a/src/templates/actors/drone-sheet.html
+++ b/src/templates/actors/drone-sheet.html
@@ -204,15 +204,15 @@
             <div class=" fittings pr-0.5">
               {{>
               "systems/swnr/templates/actors/fragments/vehicle-weapon-table.html"
-              type=actor.type actor=actor
+              type=actor.type actor=actor subtype=data.type
               }}
               {{>
               "systems/swnr/templates/actors/fragments/vehicle-fitting-table.html"
-              type=actor.type actor=actor
+              type=actor.type actor=actor subtype=data.type
               }}
               {{>
               "systems/swnr/templates/actors/fragments/vehicle-defense-table.html"
-              type=actor.type actor=actor
+              type=actor.type actor=actor subtype=data.type
               }}
             </div> <!-- end fitting left col -->
             <div class="flex flex-col">
