--- a/src/templates/actors/fragments/vehicle-defense-table.html
+++ b/src/templates/actors/fragments/vehicle-defense-table.html
@@ -1,3 +1,4 @@
+<!-- defenses -->
 <div>
   <li class="item-titles flexrow">
     <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
@@ -5,8 +6,11 @@
     <div class="item-effect">{{localize 'swnr.sheet.ship.effect'}}</div>
     <div class="item-controls text-right">
       <a class="item-control item-search text-gray-100 hover:text-green-400 transition-colors"
-        title="{{localize 'swnr.sheet.search-item'}}" data-item-type="shipDefense"  data-item-name="Defense">
-        <i class="fas fa-search"></i>
+        title="{{localize 'swnr.sheet.search-item'}}" 
+        data-item-type="shipDefense"  
+        data-item-name="Defense"
+        data-item-subtype={{subtype}}>
+          <i class="fas fa-search"></i>
       </a> 
       <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
         title="{{localize 'swnr.sheet.add-item'}}" data-item-type="shipDefense"  data-item-name="Defense">
