--- a/src/templates/actors/fragments/vehicle-weapon-table.html
+++ b/src/templates/actors/fragments/vehicle-weapon-table.html
@@ -7,8 +7,11 @@
     <div class="item-qualities">{{localize 'swnr.sheet.ship.qualities'}}</div>
     <div class="item-controls text-right">
       <a class="item-control item-search text-gray-100 hover:text-green-400 transition-colors"
-        title="{{localize 'swnr.sheet.search-item'}}" data-item-type="shipWeapon" data-item-name="Weapon">
-        <i class="fas fa-search"></i>
+        title="{{localize 'swnr.sheet.search-item'}}" 
+        data-item-type="shipWeapon" 
+        data-item-name="Weapon"
+        data-item-subtype={{subtype}}>
+         <i class="fas fa-search"></i>
       </a> 
       <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
         title="{{localize 'swnr.sheet.add-item'}}" data-item-type="shipWeapon" data-item-name="Weapon">
