small code clean up on subtype

--- a/src/templates/actors/fragments/vehicle-mods.html
+++ b/src/templates/actors/fragments/vehicle-mods.html
@@ -4,14 +4,14 @@
     <div class="weapons pr-0.5">
       {{>
       "systems/swnr/templates/actors/fragments/vehicle-weapon-table.html"
-      type=actor.type actor=actor
+      type=actor.type actor=actor subtype=subtype
       }}
     </div>
     <div class="defense pr-0.5">
       <!-- defense -->
       {{>
       "systems/swnr/templates/actors/fragments/vehicle-defense-table.html"
-      type=actor.type actor=actor
+      type=actor.type actor=actor subtype=subtype
       }}
     </div>
   </div>
@@ -21,7 +21,7 @@
     <div class=" fittings pr-0.5">
       {{>
       "systems/swnr/templates/actors/fragments/vehicle-fitting-table.html"
-      type=actor.type actor=actor
+      type=actor.type actor=actor subtype=subtype
       }}
     </div>
   </div>
