--- a/src/templates/actors/mech-sheet.html
+++ b/src/templates/actors/mech-sheet.html
@@ -131,7 +131,7 @@
           <div class="tab mods min-h-full" data-group="primary" data-tab="mods">
             {{>
               "systems/swnr/templates/actors/fragments/vehicle-mods.html" 
-                type=actor.type actor=actor
+                type=actor.type actor=actor subtype="mech"
             }}
           </div>
           <!-- notes --> 
