--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -277,7 +277,7 @@
             }}
             {{>
             "systems/swnr/templates/actors/fragments/vehicle-mods.html"
-            type=actor.type actor=actor
+            type=actor.type actor=actor subtype="ship"
             }}
           </div>
           <!-- notes -->
