--- a/src/templates/dialogs/select-asset-target.html
+++ b/src/templates/dialogs/select-asset-target.html
@@ -13,7 +13,7 @@ $(document).ready(function(){
     }).change();
 });
 </script>
-<form class="bg-gray-300 -m-2 p-2 pb-4 flex gap-1 justify-between">
+<form class=" -m-2 p-2 pb-4 flex gap-1 justify-between">
   <div class="flex flex-col gap-2">
     <div>
       Faction Target:
