increasing flavor text size

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -97,6 +97,10 @@ a:hover {
   @apply text-shadow-gray-400;
 }
 
+.flavor-text {
+  font-size: 13pt !important;;
+}
+
 .item-entry
 {
   @apply  py-0.5 pb-2 ;
