--- a/src/templates/actors/fragments/char/tab-inv.html
+++ b/src/templates/actors/fragments/char/tab-inv.html
@@ -12,7 +12,7 @@
       <label for="data.credits.debt">{{actor.data.data.tweak.debtDisplay}}
       <a class="credits-change text-gray-100 hover:text-green-400 transition-colors"
         title="{{localize 'swnr.sheet.credit-change'}} {{actor.data.data.tweak.debtDisplay}}"
-        data-item-type="debt">
+        data-credit-type="debt">
           <i class="fas fa-coins"></i>
       </a> 
       </label>
@@ -29,7 +29,7 @@
       <label for="data.credits.balance">{{actor.data.data.tweak.balanceDisplay}}
       <a class="credits-change text-gray-100 hover:text-green-400 transition-colors"
         title="{{localize 'swnr.sheet.credit-change'}} {{actor.data.data.tweak.balanceDisplay}}"
-        data-item-type="balance">
+        data-credit-type="balance">
           <i class="fas fa-coins"></i>
       </a> 
       </label>
@@ -46,7 +46,7 @@
       <label for="data.credits.owed">{{actor.data.data.tweak.owedDisplay}}
       <a class="credits-change text-gray-100 hover:text-green-400 transition-colors"
         title="{{localize 'swnr.sheet.credit-change'}} {{actor.data.data.tweak.owedDisplay}}"
-        data-item-type="owed">
+        data-credit-type="owed">
           <i class="fas fa-coins"></i>
       </a> 
       </label>
