Implemented the add-currency button functionality, including it's i18n stuff, dialog styline, and actor manipulation

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -239,6 +239,10 @@ button {
   @apply border border-gray-700 rounded-md p-1 bg-gray-300;
 }
 
+.dialog-content input {
+  @apply border border-gray-800 rounded-md p-1 bg-gray-400 text-center;
+}
+
 @for $i from 0 to 20 {
   .ammo-$i {
     text-shadow: 0 -1px $shadowColor, -1px 0 $shadowColor, 1px 0 $shadowColor,
