--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -426,7 +426,13 @@
                   <input
                     class="w-24 text-center px-1.5 py-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
                     type="number" min="0" name="data.amountOwed" value="{{actor.data.data.amountOwed}}" />
-                  <label>{{localize 'swnr.sheet.ship.amount-owed'}}</label>
+                  <label>{{localize 'swnr.sheet.ship.amount-owed'}}
+                    <a class="credits-change text-gray-100 hover:text-green-400 transition-colors"
+                    title="{{localize 'swnr.sheet.credit-change'}} {{actor.data.data.tweak.debtDisplay}}"
+                    data-credit-type="amountOwed">
+                      <i class="fas fa-coins"></i>
+                    </a> 
+                </label>
                 </div>
 
 
@@ -435,7 +441,13 @@
                   <input
                     class="w-24 text-center px-1.5 py-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
                     type="number" min="0" name="data.creditPool" value="{{actor.data.data.creditPool}}" />
-                  <label>{{localize 'swnr.sheet.ship.credit-pool'}}</label>
+                  <label>{{localize 'swnr.sheet.ship.credit-pool'}}
+                    <a class="credits-change text-gray-100 hover:text-green-400 transition-colors"
+                    title="{{localize 'swnr.sheet.credit-change'}} {{actor.data.data.tweak.debtDisplay}}"
+                    data-credit-type="creditPool">
+                      <i class="fas fa-coins"></i>
+                    </a> 
+                  </label>
                 </div>
 
                 <!-- calc cost -->
