ui fix for pilot buttons on mech sheet

--- a/src/templates/actors/drone-sheet.html
+++ b/src/templates/actors/drone-sheet.html
@@ -175,7 +175,7 @@
         </div>
 
         <!--pilot-->
-        <div class="mass flex flex-col justify-center items-center">
+        <div class="pilot flex flex-col justify-center items-center">
           <div class="border item border-gray-800 bg-gray-400 mx-auto rounded-md" data-crew-id="{{pilot.id}}"
             data-crew-name="{{pilot.name}}">
             <input
