--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -197,6 +197,33 @@ button.dialog-button {
   @apply -m-2 p-2 mt-0 pt-0 bg-gray-700;
 }
 
+a.sheet-button {
+  /* makes the button container a root element for positioning */
+  position: relative;
+}
+.sheet-button > .button-background {
+  /* this is positioned relative the the first parent component
+     with position: relative; */
+  position: absolute;
+  /* make the span for the background 100% of the button's dimensions 
+     and perfectly overlaid over the button itself. */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  
+  /* make sure the icon doesn't overpower the skill text */
+  opacity: 0.1;
+
+  /* align the contents of the "underlay" span to the center. */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* slightly bigger icon than normal */
+  font-size: 24px;
+}
+
 .sheet-button {
   @apply flex rounded-lg px-1.5 py-1 border border-coolGray-900 bg-coolGray-800 
     hover:bg-coolGray-300 hover:border-coolGray-700 text-coolGray-200
